@@ -10,6 +10,8 @@ galette (0.7.5-1) unstable; urgency=low
   * Fix shebang of galette/post_contribution_test.php with
     debian/patches/fix-php-shebang. 
   * Fix URL of Git repository.
+  * Configure galette to use FHS compliant paths.
+  * Replace 4 embedded libraries by their packaged versions.
 
  -- Raphaël Hertzog <hertzog@debian.org>  Wed, 21 Aug 2013 11:11:05 +0200
 
